MMT-3004: Fixed the Metadata Preview to be aligned up.

--- a/app/assets/stylesheets/overrides/_metadatapreview.scss
+++ b/app/assets/stylesheets/overrides/_metadatapreview.scss
@@ -1,5 +1,8 @@
 #metadata-preview{
-  padding-right: 245px;
+  max-width: 1725px;
+  padding-right: 210px;
+  padding-left: 30px;
+  flex-flow: column wrap;
 }
 
 th{
